# QCustomWidgets

./: .gitignore  README.md  pyproject.toml
qcustomwidgets/: __init__.py  designer.py  utils.py
qcustomwidgets/examples/: icon_gallery.py  icon_gallery.ui  themed_window.py
qcustomwidgets/layouts/: flow_layout.py
qcustomwidgets/models/: dataframe_model.py  df_table.py
qcustomwidgets/resources/: compile_icons.py  icons.py  icons.qrc  images.py  images.qrc
qcustomwidgets/shade_test/: shade.ui  shade_test.py  test.ui
qcustomwidgets/style/: palettes.py  stylesheets.py
qcustomwidgets/utils/: animations.py
qcustomwidgets/widgets/: button.py  datetime_edit.py  image_box.py  info.ui  log_browser.py  modals.py  perlin_loader.py  progress.py  search_line_edit.py  spin_box.py  spinner.py  switch.py  tab_widget.py
