[project]
name = "qcustomwidgets"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "app-updater",
    "loguru",
    "perlin-noise",
    "qasync",
    "qcustomwindow",
    "typing-extensions",
]

[project.optional-dependencies]
pyside = [
    "pyside6",
]

[tool.setuptools.package-data]
"*" = ["*.ui", "*.svg", "*.png", "*.ico", "*.qrc"]

[tool.uv]
config-settings = { editable_mode = "compat" }

[tool.uv.sources]
qcustomwindow = { git = "https://github.com/CrinitusFeles/QCustomWindow" }
app-updater = { git = "https://github.com/CrinitusFeles/AppUpdater" }

[tool.setuptools.packages.find]
where = ["."]
include = ["qcustomwidgets*"]
